...
                        .disableAutocorrection(true)
                        .cornerRadius(5)
                        .border(Color.gray, width: 2)
                        .onChange(of: email) { newValue in
                            isUsernameValid = viewModel.isValidEmail(newValue)
                        }
                        .accessibility(identifier: "Email") // Set accessibility identifier

                    
                    //Password TextField
                    SecureField(StaticMessage.passwordPlaceholder, text: $password)
                        .padding()
                        .foregroundColor(isPasswordValid ? Color.black : Color.red)
...
                        .disableAutocorrection(true)
                        .cornerRadius(100)
                        .border(Color.gray, width: 2)
                        .onChange(of: password) { newValue in
                            isPasswordValid = viewModel.isValidPassword(newValue)
                        }
                        .accessibility(identifier: "Password") // Set accessibility identifier

                    
                    //Login Button
                    Button(StaticMessage.loginButtonTitle) {
                        viewModel.validateInputs(email, password)
                    }
...
